===============
Stalker Changes
===============

0.2.0.b2
--------

* Stalker is now compatible with Python 2.6.
* TimeLog:
  * TimeLog instances will expand Task.schedule_timing value automatically if
    the total amount of logged time is more than the schedule_timing value.
  * TimeLogs are now considered while scheduling the task.
* WebUI:
  * Logged in work times will now be visible in gantt charts as a green bar in
    the TaskBar div.
  * Fixed Studio creation, the working hours were not correctly passed to the
    studio instance.
  * "Append User Dialog" is now working properly.
  * Department menus under 'Crew' menu are now showing the department users.
  * Color choosers in "Create Status Dialog" now have colors picked by default
    for BG and FG colors.
  * Combined ``user_create_dialog`` and ``user_update_dialog`` into one.

0.2.0.b1
--------

* WorkingHours.is_working_hour() is working now.
* WorkingHours class is moved from stalker.models.project to
  stalker.models.studio module.
* ``daily_working_hours`` attribute is moved from
  stalker.models.project.Project to stalker.models.studio.Studio class.
* Repository path variables now ends with a forward slash even if it is not
  given.
* Updated Project classes validation messages to correlate with Stalker
  standard.
* Implementation of the Studio class is finished. The scheduling works like a
  charm.
* Added dialogCreator.js which helps creating a dialog without having a widget
  (Button or MenuItem) calling it and updated dialogCaller.js to use
  dialogCreator while creating a dialog.
* It is now possible to use any characters in SimpleEntity.name and the derived
  classes.
* jQueryGantt:
  * Fix; t is now possible to correctly move a TaskBar without getting in to
    an infinite loop which was freezing the browser.
  * The timing resolution of jQueryGantt is now 1 hour.
  * Fix; GanttMaster.task_ids were not properly cleaned in GanttMaster.reset(),
    resulting wrong links to be created.